--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.6.2",
+    "bootstrap": "^4.1.3",
+    "lodash": "^4.17.11",
+    "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "sass-loader": "^7.1.0",
+    "three": "^0.99.0",
+    "three-subdivision-modifier": "^1.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "sass — watch src/styles/scss:src/styles/css | react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
