--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "2.1.1",
     "sass-loader": "^7.1.0",
     "three": "^0.99.0",
+    "three-orbitcontrols": "^2.99.1",
     "three-subdivision-modifier": "^1.0.5"
   },
   "scripts": {
