--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.3",
     "@material-ui/core": "^3.6.2",
+    "@material-ui/lab": "^3.0.0-alpha.28",
     "bootstrap": "^4.1.3",
     "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
